2013-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-dissect-buffer): Guess content-type if the first
	token is missing in the Content-Type header.

	* nndoc.el (nndoc-dissect-mime-parts-sub): Ditto.

2013-09-18  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (image-size): Declare.

2013-09-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-icalendar.el (gnus-icalendar-event--find-attendee)
	(gnus-icalendar-event-from-ical)
	(gnus-icalendar-event--build-reply-event-body)
	(gnus-icalendar-event-reply-from-buffer)
	(gnus-icalendar-find-org-event-file)
	(gnus-icalendar-event->gnus-calendar, gnus-icalendar-reply)
	(gnus-icalendar-mm-inline): Use gmm-labels instead of labels or flet.

	* mm-util.el (mm-special-display-p): Isolate XEmacs stuff.

2013-09-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-salt.el (gnus-tree-mode): Use define-derived-mode.
	Use save-current-buffer.
	(gnus-tree-mode-map): Initialize in the declaration.
	(gnus-pick-mouse-pick-region): Remove unused var `fun'.
	(scroll-in-place): Defvar it.
	(gnus-tmp-*): Defvar them.
	(gnus-get-tree-buffer): Use derived-mode-p.
	(gnus--let-eval): New macro.
	(gnus-tree-highlight-node): Use it to avoid dynamic binding of
	non-prefixed variables.
	(gnus-tree-open, gnus-tree-close): Remove unused arg `group'.

	* gnus-sum.el (gnus-summary-highlight): Remove `below' from the list of
	vars since it doesn't seem to be available.
	(gnus-set-global-variables, gnus-summary-read-group-1)
	(gnus-select-newsgroup, gnus-handle-ephemeral-exit)
	(gnus-summary-display-article, gnus-summary-select-article)
	(gnus-summary-next-article, gnus-offer-save-summaries)
	(gnus-summary-generic-mark): Use derived-mode-p.
	(gnus-summary-read-group-1, gnus-summary-exit)
	(gnus-summary-exit-no-update, gnus-kill-or-deaden-summary):
	Adjust calls to gnus-tree-close and gnus-tree-open.

	* gnus-eform.el (gnus-edit-form-mode): Use define-derived-mode.

	* gnus-agent.el (gnus-category-mode): Use define-derived-mode.