@@ -1,3 +1,10 @@
+2013-10-23  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mm-decode.el (mm-dissect-buffer): Revert last change.
+	* nndoc.el (nndoc-dissect-mime-parts-sub): Ditto.
+	The problem that motivated those changes was attributed to a broken
+	mail sender, and has been fixed.
+
 2013-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mm-decode.el (mm-dissect-buffer): Guess content-type if the first
